# lexitron

./: .gitignore  README.md  agid-common.txt  lexitron.py  pyproject.toml  setup.cfg  setup.py  utils.py
lexitron/: agid-common.txt  agid-proper.txt  dict_util.py  lexitron.py  utils.py  words-lower.txt  words-upper.txt
