[metadata]
name = Lexitron
version = 2.0.3
author = Rothos
url = http://github.com/rothos/lexitron
description = A command-line regex search engine for the English language
long_description = file: README.md
long_description_content_type = text/markdown
keywords = english, dictionary, crossword, spelling, words, lexicon, search
license = GNU GPL Version 2
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    importlib-metadata;python_version<'3.8'
    importlib-resources;python_version<'3.8'
package_dir =
    = .

[options.packages.find]
where = .

[options.package_data]
* = *.txt

[options.entry_points]
console_scripts =
    lx = lexitron.lexitron:main
